[package]
name = "dmc-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crossterm = { version = "0.26.0", features = ["serde", "event-stream"] }
ron = { version = "0.8.0" }
serde = { version = "1.0.152", features = ["derive"] }
time = { version = "0.3.19", features = [
	"serde-human-readable",
	"local-offset",
] }
dirs = { version = "4.0.0" }
thiserror = "1.0.38"
time-humanize = { version = "0.1.3", features = ["time"] }


# compile deps with opt level 2

[profile.dev.package."*"]
opt-level = 2
